Create Web Page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
                 <span class="heading-primary-main">Universe</span>
                 <span class="heading-primary-sub">Is where life happens</span>
             </h1>
+            <div class="btn-div">
+                <a href="a" class="btn">Learn More</a>
+            </div>
 
-
-        </div>
-    
-    
+        </div>    
 
     </header>
+
 </body>
 </html>
